Fix RBAC role for RunnerDeployment and RunnerReplicaSet

--- a/config/crd/bases/actions.summerwind.dev_runnerreplicasets.yaml
+++ b/config/crd/bases/actions.summerwind.dev_runnerreplicasets.yaml
@@ -29,7 +29,7 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
-      description: RunnerReplicaSet is the Schema for the runnersets API
+      description: RunnerReplicaSet is the Schema for the runnerreplicasets API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
