--- a/config/crd/bases/actions.summerwind.dev_runnerdeployments.yaml
+++ b/config/crd/bases/actions.summerwind.dev_runnerdeployments.yaml
@@ -29,7 +29,7 @@ spec:
     status: {}
   validation:
     openAPIV3Schema:
-      description: RunnerReplicaSet is the Schema for the runnersets API
+      description: RunnerDeployment is the Schema for the runnerdeployments API
       properties:
         apiVersion:
           description: 'APIVersion defines the versioned schema of this representation
