--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -29,6 +29,26 @@ rules:
 - apiGroups:
   - actions.summerwind.dev
   resources:
+  - runnerreplicasets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - actions.summerwind.dev
+  resources:
+  - runnerreplicasets/status
+  verbs:
+  - get
+  - patch
+  - update
+- apiGroups:
+  - actions.summerwind.dev
+  resources:
   - runners
   verbs:
   - create
@@ -42,26 +62,6 @@ rules:
   - actions.summerwind.dev
   resources:
   - runners/status
-  verbs:
-  - get
-  - patch
-  - update
-- apiGroups:
-  - actions.summerwind.dev
-  resources:
-  - runnersets
-  verbs:
-  - create
-  - delete
-  - get
-  - list
-  - patch
-  - update
-  - watch
-- apiGroups:
-  - actions.summerwind.dev
-  resources:
-  - runnersets/status
   verbs:
   - get
   - patch
