--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -69,6 +69,13 @@ rules:
 - apiGroups:
   - ""
   resources:
+  - events
+  verbs:
+  - create
+  - patch
+- apiGroups:
+  - ""
+  resources:
   - pods
   verbs:
   - create
