--- a/config/crd/bases/actions.summerwind.dev_runners.yaml
+++ b/config/crd/bases/actions.summerwind.dev_runners.yaml
@@ -3858,9 +3858,12 @@ spec:
               additionalProperties:
                 type: string
               type: object
-            repository:
+            organization:
               minLength: 3
-              pattern: ^[^/]+/[^/]+$
+              pattern: ^[^/]+$
+              type: string
+            repository:
+              pattern: ^[^/]*$
               type: string
             resources:
               description: ResourceRequirements describes the compute resource requirements.
@@ -6293,7 +6296,7 @@ spec:
                 type: object
               type: array
           required:
-          - repository
+          - organization
           type: object
         status:
           description: RunnerStatus defines the observed state of Runner
