add config to respect image pull policy

--- a/config/crd/bases/actions.summerwind.dev_runnerdeployments.yaml
+++ b/config/crd/bases/actions.summerwind.dev_runnerdeployments.yaml
@@ -3019,6 +3019,10 @@ spec:
                       type: array
                     image:
                       type: string
+                    imagePullPolicy:
+                      description: PullPolicy describes a policy for if/when to pull
+                        a container image
+                      type: string
                     imagePullSecrets:
                       items:
                         description: LocalObjectReference contains enough information
