--- a/config/crd/bases/actions.summerwind.dev_runnerreplicasets.yaml
+++ b/config/crd/bases/actions.summerwind.dev_runnerreplicasets.yaml
@@ -3006,6 +3006,10 @@ spec:
                       type: array
                     image:
                       type: string
+                    imagePullPolicy:
+                      description: PullPolicy describes a policy for if/when to pull
+                        a container image
+                      type: string
                     imagePullSecrets:
                       items:
                         description: LocalObjectReference contains enough information
