--- a/config/crd/bases/actions.summerwind.dev_runners.yaml
+++ b/config/crd/bases/actions.summerwind.dev_runners.yaml
@@ -2815,6 +2815,10 @@ spec:
               type: array
             image:
               type: string
+            imagePullPolicy:
+              description: PullPolicy describes a policy for if/when to pull a container
+                image
+              type: string
             imagePullSecrets:
               items:
                 description: LocalObjectReference contains enough information to let
