--- a/config/rbac/role.yaml
+++ b/config/rbac/role.yaml
@@ -10,6 +10,17 @@ rules:
   - actions.summerwind.dev
   resources:
   - horizontalrunnerautoscalers
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - actions.summerwind.dev
+  resources:
   - horizontalrunnerautoscalers/finalizers
   verbs:
   - create
@@ -31,6 +42,17 @@ rules:
   - actions.summerwind.dev
   resources:
   - runnerdeployments
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - actions.summerwind.dev
+  resources:
   - runnerdeployments/finalizers
   verbs:
   - create
@@ -52,6 +74,17 @@ rules:
   - actions.summerwind.dev
   resources:
   - runnerreplicasets
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - actions.summerwind.dev
+  resources:
   - runnerreplicasets/finalizers
   verbs:
   - create
@@ -73,6 +106,17 @@ rules:
   - actions.summerwind.dev
   resources:
   - runners
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - actions.summerwind.dev
+  resources:
   - runners/finalizers
   verbs:
   - create
@@ -101,6 +145,17 @@ rules:
   - ""
   resources:
   - pods
+  verbs:
+  - create
+  - delete
+  - get
+  - list
+  - patch
+  - update
+  - watch
+- apiGroups:
+  - ""
+  resources:
   - pods/finalizers
   verbs:
   - create
