--- a/config/crd/bases/actions.summerwind.dev_runners.yaml
+++ b/config/crd/bases/actions.summerwind.dev_runners.yaml
@@ -393,6 +393,8 @@ spec:
                   - name
                 type: object
               type: array
+            dockerWithinRunnerContainer:
+              type: boolean
             env:
               items:
                 description: EnvVar represents an environment variable present in a Container.
