Releasing latest controller from master push (#147)
Fixes #135

--- a/.github/workflows/build-runner.yml
+++ b/.github/workflows/build-runner.yml
@@ -11,6 +11,7 @@ on:
     paths:
       - runner/patched/*
       - runner/Dockerfile
+      - runner/dindrunner.Dockerfile
       - runner/entrypoint.sh
       - .github/workflows/build-runner.yml
 name: Runner
