--- a/charts/actions-runner-controller/Chart.yaml
+++ b/charts/actions-runner-controller/Chart.yaml
@@ -1,6 +1,6 @@
 apiVersion: v2
 name: actions-runner-controller
-description: A Helm chart for Kubernetes
+description: A Kubernetes controller that operates self-hosted runners for GitHub Actions on your Kubernetes cluster.
 
 # A chart can be either an 'application' or a 'library' chart.
 #
