--- a/acceptance/testdata/runnerdeploy.yaml
+++ b/acceptance/testdata/runnerdeploy.yaml
@@ -3,7 +3,7 @@ kind: RunnerDeployment
 metadata:
   name: example-runnerdeploy
 spec:
-  replicas: 1
+#  replicas: 1
   template:
     spec:
       repository: mumoshu/actions-runner-controller-ci
